fix: text position on list items and align text end on odd blobs

--- a/src/tjenesteomrader/components/blobText/blobText.module.css
+++ b/src/tjenesteomrader/components/blobText/blobText.module.css
@@ -10,6 +10,7 @@
 
 .blobText:nth-child(odd) .blobText__textbox {
   background-position: right 0 bottom 4rem;
+  text-align: end;
 }
 
 .blobText__text {
