--- a/src/tjenesteomrader/components/emojiList/emojiList.module.css
+++ b/src/tjenesteomrader/components/emojiList/emojiList.module.css
@@ -1,6 +1,7 @@
 .emojiList {
   height: fit-content;
   display: flex;
+  align-items: center;
   gap: 1.5rem;
   justify-content: space-between;
 }
@@ -17,5 +18,6 @@
 }
 
 .emojiList__text {
+  vertical-align: middle;
   font-size: 1.25rem;
 }
